--- a/app/src/main/res/layout/fragment_add_mad.xml
+++ b/app/src/main/res/layout/fragment_add_mad.xml
@@ -21,6 +21,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25dp"
+        android:textColor="#ee163f"
+        android:fontFamily="sans-serif-condensed"
+        />
+
+    <Button
+        android:id="@+id/bn_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Set Date"
+        android:layout_below="@id/tv"
+        app:layout_constraintTop_toBottomOf="@+id/tv" />
+
+
     <EditText
         android:id="@+id/txt_mad_id"
         android:layout_width="wrap_content"
@@ -29,7 +47,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="40dp"
         android:ems="10"
-        android:hint="Mad Id"
+        android:hint="dd/mm/åå"
         android:inputType="textPersonName|number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,10 +116,19 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
+        android:background="@android:color/holo_green_dark"
         android:text="Gem"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_fedt" />
+
+
+
+
+
+
+
+
 </android.support.constraint.ConstraintLayout>
 
 
