--- a/app/src/main/res/layout/fragment_forside.xml
+++ b/app/src/main/res/layout/fragment_forside.xml
@@ -28,7 +28,7 @@
         app:srcCompat="@drawable/sense" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/bn_login"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginBottom="8dp"
@@ -47,3 +47,4 @@
         app:layout_constraintVertical_bias="0.363" />
 
 </android.support.constraint.ConstraintLayout>
+
